fix alignment and update URL _id

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7792,18 +7792,21 @@ p.apikey-note {
   text-align: justify;
 }
 
-.team-setup-squad-block .MA-link-note {
+.MA-link-note {
   display: inline-block;
   font-size: inherit;
   padding: 1.5em 1em;
-  position: relative;
+  position: fixed;
+  top: 21em;
+  right: 0em;
+  left: 0em;
 }
 
-.team-setup-squad-block .MA-link-note > p {
+.MA-link-note > p {
   color: #777677;
-  font-size: .8em;
+  font-size: .7em;
   line-height: 0em;
   padding: 0em 1em 0;
-  text-align: justify;
+  text-align: left;
 }
 
